---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-03-13
  Bugfixes:
    - don't crash if a signal shows up in multiple inventories (fixes #2 - thanks @fedcomp, #3 - thanks @GentlemanBear, thanks @Joserichi for a PR!)
    - show all inventories of e.g. rocket silo, especially inventories with index > 8 (thanks @xyzzycgn for a PR!)
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-12-08
  Bugfixes:
    - fix another crash when starting with invalid sensors in storage
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2024-12-08
  Features:
    - add support for infinity chest
  Bugfixes:
    - fix crash when sensor entities are mass-invalidated
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-11-22
  Features:
    - add support for space platform build
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-11-21
  Bugfixes:
    - fix crash with vehicle equipment grid (thanks @aiden-okrent)
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-11-18
  Changes:
    - Factorio 2.0 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.10.7
Date: 2023-08-13
  Bugfixes:
    - capped fuel value to max integer #25
---------------------------------------------------------------------------------------------------
Version: 1.10.6
Date: 2022-08-22
  Bugfixes:
    - MP desync from deregistering filtered events #23