@@ -2,6 +2,8 @@
 Version: 2.0.6
 Date: ????
   Changes:
+    - Support rocket silos properly for Space age and the regular game (progress counts to 100) - (#6, thanks @xyzzycgn)
+    - If a rocket is present and another is being built, report progress of the second rocket and send a virtual "R" signal for a rocket being ready to launch
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.5
 Date: 2025-03-13
